--- a/about/index.html
+++ b/about/index.html
@@ -9,12 +9,12 @@
 趣味 旅行/ゲーム/読書
  " />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://example.org/about/" /><meta property="og:image" content="http://example.org/105"/><meta property="article:section" content="" />
+<meta property="og:url" content="https://Ryutaro-A.github.io/about/" /><meta property="og:image" content="https://Ryutaro-A.github.io/105"/><meta property="article:section" content="" />
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="http://example.org/105"/>
+<meta name="twitter:image" content="https://Ryutaro-A.github.io/105"/>
 
 <meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="About Ryutaro-A 所属 電気通信大学大学院 稲葉研究室 修士１年
@@ -23,7 +23,7 @@
 <meta name="application-name" content="Ryutaro note">
 <meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="http://example.org/about/" /><link rel="prev" href="http://example.org/posts/" /><link rel="stylesheet" href="/css/about.min.css"><link rel="stylesheet" href="/css/page.min.css"><link rel="stylesheet" href="/css/home.min.css"><script type="application/ld+json">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://Ryutaro-A.github.io/about/" /><link rel="prev" href="https://Ryutaro-A.github.io/posts/" /><link rel="stylesheet" href="/css/about.min.css"><link rel="stylesheet" href="/css/page.min.css"><link rel="stylesheet" href="/css/home.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
@@ -31,9 +31,9 @@
         "inLanguage": "en",
         "mainEntityOfPage": {
             "@type": "WebPage",
-            "@id": "http:\/\/example.org\/about\/"
+            "@id": "https:\/\/Ryutaro-A.github.io\/about\/"
         },"genre": "page","wordcount":  8 ,
-        "url": "http:\/\/example.org\/about\/","publisher": {
+        "url": "https:\/\/Ryutaro-A.github.io\/about\/","publisher": {
             "@type": "Organization",
             "name": ""},"author": {
                 "@type": "Person",
