--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
         <title>Ryutaro note</title><meta name="description" content="This is Ryutaro&#39;s Page."><meta property="og:title" content="Ryutaro note" />
 <meta property="og:description" content="This is Ryutaro&#39;s Page." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://Ryutaro-A.github.io/ryutaro1104/" /><meta property="og:image" content="https://Ryutaro-A.github.io/ryutaro1104/105"/>
+<meta property="og:url" content="https://ryutaro-a.github.io/ryutaro1104/" /><meta property="og:image" content="https://ryutaro-a.github.io/ryutaro1104/105"/>
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://Ryutaro-A.github.io/ryutaro1104/105"/>
+<meta name="twitter:image" content="https://ryutaro-a.github.io/ryutaro1104/105"/>
 
 <meta name="twitter:title" content="Ryutaro note"/>
 <meta name="twitter:description" content="This is Ryutaro&#39;s Page."/>
 <meta name="application-name" content="Ryutaro note">
 <meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://Ryutaro-A.github.io/ryutaro1104/" /><link rel="alternate" href="/ryutaro1104/index.xml" type="application/rss+xml" title="Ryutaro note">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/" /><link rel="alternate" href="/ryutaro1104/index.xml" type="application/rss+xml" title="Ryutaro note">
     <link rel="feed" href="/ryutaro1104/index.xml" type="application/rss+xml" title="Ryutaro note"><link rel="stylesheet" href="/ryutaro1104/css/home.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "url": "https:\/\/Ryutaro-A.github.io\/ryutaro1104\/","inLanguage": "en","author": {
+        "url": "https:\/\/ryutaro-a.github.io\/ryutaro1104\/","inLanguage": "en","author": {
                 "@type": "Person",
                 "name": "Ryutaro-A"
             },"description": "This is Ryutaro's Page.","name": "Ryutaro note"
