--- a/404.html
+++ b/404.html
@@ -7,25 +7,25 @@
         <title>404 Page not found - Ryutaro note</title><meta name="description" content="This is Ryutaro&#39;s Page."><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="This is Ryutaro&#39;s Page." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://ryutaro-a.github.io/ryutaro1104/404.html" /><meta property="og:image" content="https://ryutaro-a.github.io/ryutaro1104/105"/>
+<meta property="og:url" content="https://ryutaro-a.github.io/404.html" /><meta property="og:image" content="https://ryutaro-a.github.io/105"/>
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ryutaro-a.github.io/ryutaro1104/105"/>
+<meta name="twitter:image" content="https://ryutaro-a.github.io/105"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="This is Ryutaro&#39;s Page."/>
 <meta name="application-name" content="Ryutaro note">
 <meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/404.html" /><link rel="stylesheet" href="/ryutaro1104/css/page.min.css"><link rel="stylesheet" href="/ryutaro1104/css/home.min.css"></head><body data-header-desktop="fixed" data-header-mobile="auto"><script>(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/404.html" /><link rel="stylesheet" href="/css/page.min.css"><link rel="stylesheet" href="/css/home.min.css"></head><body data-header-desktop="fixed" data-header-mobile="auto"><script>(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
 
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/ryutaro1104/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
+            <a href="/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/ryutaro1104/ryutaro1104/about/"> About </a><a class="menu-item" href="/ryutaro1104/ryutaro1104/categories/index.html"> Categories </a><a class="menu-item" href="/ryutaro1104/ryutaro1104/tags/"> Tags </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/about/"> About </a><a class="menu-item" href="/categories/index.html"> Categories </a><a class="menu-item" href="/tags/"> Tags </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
                         <a href="#" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw"></i>
@@ -46,7 +46,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/ryutaro1104/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
+                <a href="/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -68,7 +68,7 @@
                     <a href="#" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="/ryutaro1104/ryutaro1104/about/" title="">About</a><a class="menu-item" href="/ryutaro1104/ryutaro1104/categories/index.html" title="">Categories</a><a class="menu-item" href="/ryutaro1104/ryutaro1104/tags/" title="">Tags</a><div class="menu-item"><a href="/index.xml" title="RSS"><i class="fas fa-rss fa-fw" title="RSS"></i> </a>
+                </div><a class="menu-item" href="/about/" title="">About</a><a class="menu-item" href="/categories/index.html" title="">Categories</a><a class="menu-item" href="/tags/" title="">Tags</a><div class="menu-item"><a href="/index.xml" title="RSS"><i class="fas fa-rss fa-fw" title="RSS"></i> </a>
                 <span>&nbsp;|&nbsp;</span><a href="javascript:void(0);" class="theme-switch" title="Switch Theme">
                     <i class="fas fa-adjust fa-fw"></i>
                 </a>
@@ -83,11 +83,11 @@
                 <div class="container"><div class="page" id="content-404">
         <h2>404</h2>
         <p>The page you&#39;re looking for doesn&#39;t exist. Sorry.</p>
-        <a href="/ryutaro1104/" title="Home">Home</a>
+        <a href="/" title="Home">Home</a>
         <a href="javascript:void(0);" title="Back" onclick="window.history.back();">Back</a>
     </div></div>
             </main>
-            <footer class="footer"><div class="footer-container"><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2022</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/ryutaro1104/">Ryutaro-A</a></span></div>
+            <footer class="footer"><div class="footer-container"><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2022</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/">Ryutaro-A</a></span></div>
 </div>
 <script>
 if ('serviceWorker' in navigator) {
@@ -111,4 +111,4 @@ if ('serviceWorker' in navigator) {
                 <i class="fas fa-chevron-up fa-fw"></i>
             </a><a href="#" id="view-comments" class="fixed-button" title="View Comments">
                 <i class="fas fa-comment-alt fa-fw"></i>
-            </a></div><link rel="stylesheet" href="/ryutaro1104/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/ryutaro1104/lib/animate/animate.min.css"><link rel="stylesheet" href="/ryutaro1104/lib/cookieconsent/cookieconsent.min.css"><script src="/ryutaro1104/lib/autocomplete/autocomplete.min.js"></script><script src="/ryutaro1104/lib/lunr/lunr.min.js"></script><script src="/ryutaro1104/lib/lazysizes/lazysizes.min.js"></script><script src="/ryutaro1104/sw.min.js"></script><script src="/ryutaro1104/lib/cookieconsent/cookieconsent.min.js"></script><script>window.config={"code":{"maxShownLines":10},"cookieconsent":{"content":{"dismiss":"Got it!","link":"Learn more","message":"This website uses Cookies to improve your experience."},"enable":true,"palette":{"button":{"background":"#f0f0f0"},"popup":{"background":"#1aa3ff"}},"theme":"edgeless"},"search":{"highlightTag":"em","lunrIndexURL":"/ryutaro1104/index.json","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30,"type":"lunr"}};</script><script src="/ryutaro1104/js/theme.min.js"></script></body></html>
+            </a></div><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><link rel="stylesheet" href="/lib/cookieconsent/cookieconsent.min.css"><script src="/lib/autocomplete/autocomplete.min.js"></script><script src="/lib/lunr/lunr.min.js"></script><script src="/lib/lazysizes/lazysizes.min.js"></script><script src="/lib/cookieconsent/cookieconsent.min.js"></script><script>window.config={"code":{"maxShownLines":10},"cookieconsent":{"content":{"dismiss":"Got it!","link":"Learn more","message":"This website uses Cookies to improve your experience."},"enable":true,"palette":{"button":{"background":"#f0f0f0"},"popup":{"background":"#1aa3ff"}},"theme":"edgeless"},"search":{"highlightTag":"em","lunrIndexURL":"/index.json","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30,"type":"lunr"}};</script><script src="/js/theme.min.js"></script></body></html>
