--- a/about/index.html
+++ b/about/index.html
@@ -21,9 +21,9 @@
 趣味 旅行/ゲーム/読書
  "/>
 <meta name="application-name" content="Ryutaro note">
-<meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/about/" /><link rel="prev" href="https://ryutaro-a.github.io/ryutaro1104/posts/" /><link rel="stylesheet" href="/ryutaro1104/css/about.min.css"><link rel="stylesheet" href="/ryutaro1104/css/page.min.css"><link rel="stylesheet" href="/ryutaro1104/css/home.min.css"><script type="application/ld+json">
+<meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="https://ryutaro-a.github.io/ryutaro1104/favicon.ico" />
+        <link rel="icon" type="image/png" sizes="32x32" href="https://ryutaro-a.github.io/ryutaro1104/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="https://ryutaro-a.github.io/ryutaro1104/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="https://ryutaro-a.github.io/ryutaro1104/apple-touch-icon.png"><link rel="mask-icon" href="https://ryutaro-a.github.io/ryutaro1104/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="https://ryutaro-a.github.io/ryutaro1104/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/about/" /><link rel="prev" href="https://ryutaro-a.github.io/ryutaro1104/posts/" /><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/about.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/page.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/home.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
@@ -45,10 +45,10 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/ryutaro1104/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
+            <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/ryutaro1104/ryutaro1104/about/"> About </a><a class="menu-item" href="/ryutaro1104/ryutaro1104/categories/index.html"> Categories </a><a class="menu-item" href="/ryutaro1104/ryutaro1104/tags/"> Tags </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item active" href="https://ryutaro-a.github.io/ryutaro1104/about/"> About </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/categories/index.html"> Categories </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/tags/"> Tags </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
                         <a href="#" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw"></i>
@@ -59,7 +59,7 @@
                         <span class="search-button search-loading" id="search-loading-desktop">
                             <i class="fas fa-spinner fa-fw fa-spin"></i>
                         </span>
-                    </span><a class="menu-item" href="/index.xml" title="RSS"><i class="fas fa-rss fa-fw" title="RSS"></i> </a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
+                    </span><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/index.xml" title="RSS"><i class="fas fa-rss fa-fw" title="RSS"></i> </a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                     <i class="fas fa-adjust fa-fw"></i>
                 </a>
             </div>
@@ -69,7 +69,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/ryutaro1104/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
+                <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -91,7 +91,7 @@
                     <a href="#" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="/ryutaro1104/ryutaro1104/about/" title="">About</a><a class="menu-item" href="/ryutaro1104/ryutaro1104/categories/index.html" title="">Categories</a><a class="menu-item" href="/ryutaro1104/ryutaro1104/tags/" title="">Tags</a><div class="menu-item"><a href="/index.xml" title="RSS"><i class="fas fa-rss fa-fw" title="RSS"></i> </a>
+                </div><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/about/" title="">About</a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/categories/index.html" title="">Categories</a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/tags/" title="">Tags</a><div class="menu-item"><a href="https://ryutaro-a.github.io/ryutaro1104/index.xml" title="RSS"><i class="fas fa-rss fa-fw" title="RSS"></i> </a>
                 <span>&nbsp;|&nbsp;</span><a href="javascript:void(0);" class="theme-switch" title="Switch Theme">
                     <i class="fas fa-adjust fa-fw"></i>
                 </a>
@@ -106,12 +106,12 @@
                 <div class="container"><article class="page single"><h2 class="single-title animated fadeInDown faster" data-about="true"></h2><div class="single-card" data-param="on" data-about="true"><div class="profile">
     <div class="grid top"><div class="img"><img
         class="lazyload"
-        src="/ryutaro1104/svg/loading.min.svg"
-        data-src="/images/image.webp"
-        data-srcset="/images/image.webp, /images/image.webp 1.5x, /images/image.webp 2x"
+        src="https://ryutaro-a.github.io/ryutaro1104/svg/loading.min.svg"
+        data-src="https://ryutaro-a.github.io/ryutaro1104/images/image.webp"
+        data-srcset="https://ryutaro-a.github.io/ryutaro1104/images/image.webp, https://ryutaro-a.github.io/ryutaro1104/images/image.webp 1.5x, https://ryutaro-a.github.io/ryutaro1104/images/image.webp 2x"
         data-sizes="auto"
         alt="/images/image.webp"
-        title="/images/image.webp" /></div><h2>Ryutaro note</h2><div class="subtitle">This is Ryutaro's Page.</div><div class="links"><a href="https://github.com/Ryutaro-A" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a><a href="https://twitter.com/@ryu1104_m" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fab fa-twitter fa-fw"></i></a><a href="/ryutaro1104/index.xml" title="RSS" target="_blank" rel="noopener noreffer me"><i class="fas fa-rss fa-fw"></i></a></div></div>
+        title="/images/image.webp" /></div><h2>Ryutaro note</h2><div class="subtitle">This is Ryutaro's Page.</div><div class="links"><a href="https://github.com/Ryutaro-A" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a><a href="https://twitter.com/@ryu1104_m" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fab fa-twitter fa-fw"></i></a><a href="https://ryutaro-a.github.io/ryutaro1104/index.xml" title="RSS" target="_blank" rel="noopener noreffer me"><i class="fas fa-rss fa-fw"></i></a></div></div>
     <div class="grid bottom">
     <div class="info"><p><i class="fas fa-building fa-fw"></i>&nbsp;所属:<span>電気通信大学大学院 情報理工学研究科 情報学専攻</span></p>
         <hr><p><i class="fas fa-graduation-cap fa-fw"></i>&nbsp;専門:<span>自然言語処理/対話システム</span></p>
@@ -155,7 +155,7 @@
         </div>
     </article></div>
             </main>
-            <footer class="footer"><div class="footer-container"><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2022</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/ryutaro1104/">Ryutaro-A</a></span></div>
+            <footer class="footer"><div class="footer-container"><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2022</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://ryutaro-a.github.io/ryutaro1104/">Ryutaro-A</a></span></div>
 </div>
 <script>
 if ('serviceWorker' in navigator) {
@@ -179,4 +179,4 @@ if ('serviceWorker' in navigator) {
                 <i class="fas fa-chevron-up fa-fw"></i>
             </a><a href="#" id="view-comments" class="fixed-button" title="View Comments">
                 <i class="fas fa-comment-alt fa-fw"></i>
-            </a></div><link rel="stylesheet" href="/ryutaro1104/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/ryutaro1104/lib/animate/animate.min.css"><link rel="stylesheet" href="/ryutaro1104/lib/katex/katex.min.css"><link rel="stylesheet" href="/ryutaro1104/lib/katex/copy-tex.min.css"><link rel="stylesheet" href="/ryutaro1104/lib/cookieconsent/cookieconsent.min.css"><script src="/ryutaro1104/lib/autocomplete/autocomplete.min.js"></script><script src="/ryutaro1104/lib/lunr/lunr.min.js"></script><script src="/ryutaro1104/lib/lazysizes/lazysizes.min.js"></script><script src="/ryutaro1104/lib/clipboard/clipboard.min.js"></script><script src="/ryutaro1104/lib/sharer/sharer.min.js"></script><script src="/ryutaro1104/lib/katex/katex.min.js"></script><script src="/ryutaro1104/lib/katex/auto-render.min.js"></script><script src="/ryutaro1104/lib/katex/copy-tex.min.js"></script><script src="/ryutaro1104/lib/katex/mhchem.min.js"></script><script src="/ryutaro1104/sw.min.js"></script><script src="/ryutaro1104/lib/cookieconsent/cookieconsent.min.js"></script><script>window.config={"code":{"copyTitle":"Copy to clipboard","maxShownLines":10},"cookieconsent":{"content":{"dismiss":"Got it!","link":"Learn more","message":"This website uses Cookies to improve your experience."},"enable":true,"palette":{"button":{"background":"#f0f0f0"},"popup":{"background":"#1aa3ff"}},"theme":"edgeless"},"math":{"delimiters":[{"display":true,"left":"$$","right":"$$"},{"display":true,"left":"\\[","right":"\\]"},{"display":false,"left":"$","right":"$"},{"display":false,"left":"\\(","right":"\\)"}],"strict":false},"search":{"highlightTag":"em","lunrIndexURL":"/ryutaro1104/index.json","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30,"type":"lunr"}};</script><script src="/ryutaro1104/js/theme.min.js"></script></body></html>
+            </a></div><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/lib/animate/animate.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/lib/katex/katex.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/lib/katex/copy-tex.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/lib/cookieconsent/cookieconsent.min.css"><script src="https://ryutaro-a.github.io/ryutaro1104/lib/autocomplete/autocomplete.min.js"></script><script src="https://ryutaro-a.github.io/ryutaro1104/lib/lunr/lunr.min.js"></script><script src="https://ryutaro-a.github.io/ryutaro1104/lib/lazysizes/lazysizes.min.js"></script><script src="https://ryutaro-a.github.io/ryutaro1104/lib/clipboard/clipboard.min.js"></script><script src="https://ryutaro-a.github.io/ryutaro1104/lib/sharer/sharer.min.js"></script><script src="https://ryutaro-a.github.io/ryutaro1104/lib/katex/katex.min.js"></script><script src="https://ryutaro-a.github.io/ryutaro1104/lib/katex/auto-render.min.js"></script><script src="https://ryutaro-a.github.io/ryutaro1104/lib/katex/copy-tex.min.js"></script><script src="https://ryutaro-a.github.io/ryutaro1104/lib/katex/mhchem.min.js"></script><script src="https://ryutaro-a.github.io/ryutaro1104/lib/cookieconsent/cookieconsent.min.js"></script><script>window.config={"code":{"copyTitle":"Copy to clipboard","maxShownLines":10},"cookieconsent":{"content":{"dismiss":"Got it!","link":"Learn more","message":"This website uses Cookies to improve your experience."},"enable":true,"palette":{"button":{"background":"#f0f0f0"},"popup":{"background":"#1aa3ff"}},"theme":"edgeless"},"math":{"delimiters":[{"display":true,"left":"$$","right":"$$"},{"display":true,"left":"\\[","right":"\\]"},{"display":false,"left":"$","right":"$"},{"display":false,"left":"\\(","right":"\\)"}],"strict":false},"search":{"highlightTag":"em","lunrIndexURL":"/index.json","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30,"type":"lunr"}};</script><script src="https://ryutaro-a.github.io/ryutaro1104/js/theme.min.js"></script></body></html>
