--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@
             <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item active" href="https://ryutaro-a.github.io/ryutaro1104/about/"> About </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/categories/index.html"> Categories </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/tags/"> Tags </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item active" href="https://ryutaro-a.github.io/ryutaro1104/about/"> About </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/categories/"> Categories </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/tags/"> Tags </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
                         <a href="#" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw"></i>
@@ -91,7 +91,7 @@
                     <a href="#" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/about/" title="">About</a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/categories/index.html" title="">Categories</a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/tags/" title="">Tags</a><div class="menu-item"><a href="https://ryutaro-a.github.io/ryutaro1104/index.xml" title="RSS"><i class="fas fa-rss fa-fw" title="RSS"></i> </a>
+                </div><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/about/" title="">About</a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/categories/" title="">Categories</a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/tags/" title="">Tags</a><div class="menu-item"><a href="https://ryutaro-a.github.io/ryutaro1104/index.xml" title="RSS"><i class="fas fa-rss fa-fw" title="RSS"></i> </a>
                 <span>&nbsp;|&nbsp;</span><a href="javascript:void(0);" class="theme-switch" title="Switch Theme">
                     <i class="fas fa-adjust fa-fw"></i>
                 </a>
