--- a/offline/index.html
+++ b/offline/index.html
@@ -1,20 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="robots" content="noodp" />
-        <title>Offline - Ryutaro note</title><meta name="description" content="This is Ryutaro&#39;s Page."><meta name="application-name" content="Ryutaro note">
-<meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="https://ryutaro-a.github.io/ryutaro1104/favicon.ico" />
-        <link rel="icon" type="image/png" sizes="32x32" href="https://ryutaro-a.github.io/ryutaro1104/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="https://ryutaro-a.github.io/ryutaro1104/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="https://ryutaro-a.github.io/ryutaro1104/apple-touch-icon.png"><link rel="mask-icon" href="https://ryutaro-a.github.io/ryutaro1104/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="https://ryutaro-a.github.io/ryutaro1104/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/offline/" /><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/home.min.css"></head><body><script>(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script><div class="wrapper">
-            <main class="main">
-                <div class="container"><article id="content-404">
-        <h2>Offline</h2>
-        <p>You&#39;re offline. Check your internet connection.</p>
-        <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Home">Home</a>
-        <a href="javascript:void(0);" title="Back" onclick="window.history.back();">Back</a>
-    </article></div>
-            </main>
-        </div>
-    </body></html>
+<!doctype html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=robots content="noodp"><title>Offline - Ryutaro note</title><meta name=description content="This is Ryutaro's Page."><meta name=application-name content="Ryutaro note"><meta name=apple-mobile-web-app-title content="Ryutaro note"><meta name=theme-color content="#ffffff"><meta name=msapplication-TileColor content="#da532c"><link rel="shortcut icon" type=image/x-icon href=https://ryutaro-a.github.io/ryutaro1104/favicon.ico><link rel=icon type=image/png sizes=32x32 href=https://ryutaro-a.github.io/ryutaro1104/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=https://ryutaro-a.github.io/ryutaro1104/favicon-16x16.png><link rel=apple-touch-icon sizes=180x180 href=https://ryutaro-a.github.io/ryutaro1104/apple-touch-icon.png><link rel=mask-icon href=https://ryutaro-a.github.io/ryutaro1104/safari-pinned-tab.svg color=#5bbad5><link rel=manifest href=https://ryutaro-a.github.io/ryutaro1104/site.webmanifest><link rel=canonical href=https://ryutaro-a.github.io/ryutaro1104/offline/><link rel=stylesheet href=https://ryutaro-a.github.io/ryutaro1104/css/home.min.css></head><body><script>(window.localStorage&&localStorage.getItem("theme")?localStorage.getItem("theme")==="dark":"auto"==="auto"?window.matchMedia("(prefers-color-scheme: dark)").matches:"auto"==="dark")&&document.body.setAttribute("theme","dark")</script><div class=wrapper><main class=main><div class=container><article id=content-404><h2>Offline</h2><p>You're offline. Check your internet connection.</p><a href=https://ryutaro-a.github.io/ryutaro1104/ title=Home>Home</a>
+<a href=javascript:void(0); title=Back onclick=window.history.back()>Back</a></article></div></main></div></body></html>
