--- a/言語処理100本ノックのための環境構築/index.html
+++ b/言語処理100本ノックのための環境構築/index.html
@@ -165,9 +165,15 @@ Pyenvの導入は簡単で、WSL上で以下のコマンドをすべて打つだ
                     </div>
                     <div class="details-content toc-content" id="toc-content-static"><nav id="TableOfContents">
   <ul>
-    <li><a href="#まずはwslを入れよう">まずはWSLを入れよう！</a>
+    <li><a href="#はじめに">はじめに</a></li>
+    <li><a href="#注意">注意</a></li>
+    <li><a href="#環境構築">環境構築</a>
       <ul>
-        <li><a href="#ステップ1">ステップ1</a></li>
+        <li><a href="#まずはwslを入れよう">まずはWSLを入れよう！</a>
+          <ul>
+            <li><a href="#ステップ1">ステップ1</a></li>
+          </ul>
+        </li>
         <li><a href="#ステップ2">ステップ2</a></li>
       </ul>
     </li>
@@ -178,22 +184,22 @@ Pyenvの導入は簡単で、WSL上で以下のコマンドをすべて打つだ
     <li><a href="#cabochaの導入第5章で必要">CaboChaの導入(第5章で必要)</a></li>
   </ul>
 </nav></div>
-                </div><div class="content" id="content"><h1 id="はじめに">はじめに</h1>
+                </div><div class="content" id="content"><h2 id="はじめに">はじめに</h2>
 <p>みなさんは言語処理100本ノックを知っていますか？<br>
 言語処理100本ノックとは東工大の岡崎直観先生らによって言語処理を楽しく学ぶことを目的として作成された問題集です。<br></p>
 <iframe class="hatenablogcard" style="width:100%;height:155px;max-width:680px;" title="言語処理100本ノック 2020 (Rev 2) - NLP100 2020" src="https://hatenablog-parts.com/embed?url=https://nlp100.github.io/ja/" width="300" height="150" frameborder="0" scrolling="no"></iframe>
 <p>私の所属している研究室でも初学者向けの教材として利用されていますが、環境構築で躓いている人がかなりいたため、研究室内のページで環境構築の解説を作成しました。<br>
 しかし研究室内向けだけでは勿体ないと思い、この度Qiitanに投稿することにしました。<br>
 検索しても言語処理100本ノックのためのまとまった環境構築方法がなかったというのも大きな理由です。<br></p>
-<h1 id="注意">注意</h1>
+<h2 id="注意">注意</h2>
 <p>本記事で紹介している環境構築方法は言語処理100本ノックを解くことを主目的としているため、ほかの用途には適さなかったり、無駄が多かったりしますので、予めご了承ください。<br>
 また、本記事はWindowsユーザ向けなのでMacユーザの方は適宜読み替えたりしてください。<br>
 要望が上がればMac端末で動作を検証してからMac向けの記事を書くかもしれません。<br></p>
-<h1 id="環境構築">環境構築</h1>
-<h2 id="まずはwslを入れよう">まずはWSLを入れよう！</h2>
+<h2 id="環境構築">環境構築</h2>
+<h3 id="まずはwslを入れよう">まずはWSLを入れよう！</h3>
 <p>言語処理100本ノックを解く上で一番簡単かつ解きやすい環境としてWSLというものがあります。<br>
 これはubuntuと呼ばれるLinux系のOSをWindows内に仮想的に作れるようにしたツールで、2ステップで簡単に導入できます。<br></p>
-<h3 id="ステップ1">ステップ1</h3>
+<h4 id="ステップ1">ステップ1</h4>
 <p>Windows側でWSLが使用できるように機能を有効化します。<br>
 wiindowsボタンを押してから<code>windows</code>と検索して、<code>Windowsの機能の有効化または無効化</code>という項目をクリックしてください。<br>
 画像で言うと赤枠の部分です。<br>
