--- a/fundamental_svm/index.html
+++ b/fundamental_svm/index.html
@@ -41,9 +41,7 @@ https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Kernel_Machine.svg/288
 データ データは基本的には数が多いほど精度が高くなりますが、今回はお試しなので、少なめのデータを用意します。 このデータは今年の天気のデータです。 まあ天気データは気象庁のHPにいくらでもあるので、興味が湧いたら見てみてください。 左から、 気温、降水量、日照時間、湿度、天気(0:晴れ、1:曇り、2:雨) を表しています。 このデータで言うと、気温、降水量、日照時間、湿度までが説明変数、**天気(0:晴れ、1:曇り、2:雨)**が目的変数です。
 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20  6."/>
 <meta name="application-name" content="Ryutaro note">
-<meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="https://ryutaro-a.github.io/ryutaro1104/favicon.ico" />
-        <link rel="icon" type="image/png" sizes="32x32" href="https://ryutaro-a.github.io/ryutaro1104/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="https://ryutaro-a.github.io/ryutaro1104/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="https://ryutaro-a.github.io/ryutaro1104/apple-touch-icon.png"><link rel="mask-icon" href="https://ryutaro-a.github.io/ryutaro1104/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="https://ryutaro-a.github.io/ryutaro1104/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/fundamental_svm/" /><link rel="prev" href="https://ryutaro-a.github.io/ryutaro1104/nlp100-env/" /><link rel="next" href="https://ryutaro-a.github.io/ryutaro1104/fairseq-env/" /><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/page.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/home.min.css"><script type="application/ld+json">
+<meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://ryutaro-a.github.io/ryutaro1104/images/image.png"><link rel="apple-touch-icon" sizes="180x180" href="https://ryutaro-a.github.io/ryutaro1104/apple-touch-icon.png"><link rel="mask-icon" href="https://ryutaro-a.github.io/ryutaro1104/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="https://ryutaro-a.github.io/ryutaro1104/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/fundamental_svm/" /><link rel="prev" href="https://ryutaro-a.github.io/ryutaro1104/nlp100-env/" /><link rel="next" href="https://ryutaro-a.github.io/ryutaro1104/fairseq-env/" /><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/page.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/home.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
@@ -65,7 +63,7 @@ https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Kernel_Machine.svg/288
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
+            <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note">Ryutaro note</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/about/"> About </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/categories/"> Categories </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/tags/"> Tags </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -89,7 +87,7 @@ https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Kernel_Machine.svg/288
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
+                <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note">Ryutaro note</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
