--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 <meta name="twitter:title" content="Ryutaro note"/>
 <meta name="twitter:description" content="This is Ryutaro&#39;s Page."/>
 <meta name="application-name" content="Ryutaro note">
-<meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="https://ryutaro-a.github.io/ryutaro1104/favicon.ico" />
-        <link rel="icon" type="image/png" sizes="32x32" href="https://ryutaro-a.github.io/ryutaro1104/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="https://ryutaro-a.github.io/ryutaro1104/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="https://ryutaro-a.github.io/ryutaro1104/apple-touch-icon.png"><link rel="mask-icon" href="https://ryutaro-a.github.io/ryutaro1104/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="https://ryutaro-a.github.io/ryutaro1104/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/" /><link rel="alternate" href="https://ryutaro-a.github.io/ryutaro1104/index.xml" type="application/rss+xml" title="Ryutaro note">
+<meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://ryutaro-a.github.io/ryutaro1104/images/image.png"><link rel="apple-touch-icon" sizes="180x180" href="https://ryutaro-a.github.io/ryutaro1104/apple-touch-icon.png"><link rel="mask-icon" href="https://ryutaro-a.github.io/ryutaro1104/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="https://ryutaro-a.github.io/ryutaro1104/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/" /><link rel="alternate" href="https://ryutaro-a.github.io/ryutaro1104/index.xml" type="application/rss+xml" title="Ryutaro note">
     <link rel="feed" href="https://ryutaro-a.github.io/ryutaro1104/index.xml" type="application/rss+xml" title="Ryutaro note"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/home.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
@@ -33,7 +31,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
+            <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note">Ryutaro note</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/about/"> About </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/categories/"> Categories </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/tags/"> Tags </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -57,7 +55,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
+                <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note">Ryutaro note</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
