--- a/nlp100-env/index.html
+++ b/nlp100-env/index.html
@@ -67,9 +67,7 @@ Pyenvの導入 Pythonのバージョン管理に便利なPyenvを導入します
 Pyenvの導入は簡単で、WSL上で以下のコマンドをすべて打つだけで終わりです。
 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18  # 依存パッケージの導入 $ sudo apt install -y build-essential $ sudo apt install -y libffi-dev $ sudo apt install -y libssl-dev # openssl $ sudo apt install -y zlib1g-dev $ sudo apt install -y libbz2-dev libreadline-dev libsqlite3-dev # sqlite3, bz2, readline $ sudo apt install -y git $ cd $ git clone https://github."/>
 <meta name="application-name" content="Ryutaro note">
-<meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="https://ryutaro-a.github.io/ryutaro1104/favicon.ico" />
-        <link rel="icon" type="image/png" sizes="32x32" href="https://ryutaro-a.github.io/ryutaro1104/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="https://ryutaro-a.github.io/ryutaro1104/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="https://ryutaro-a.github.io/ryutaro1104/apple-touch-icon.png"><link rel="mask-icon" href="https://ryutaro-a.github.io/ryutaro1104/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="https://ryutaro-a.github.io/ryutaro1104/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/nlp100-env/" /><link rel="next" href="https://ryutaro-a.github.io/ryutaro1104/fundamental_svm/" /><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/page.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/home.min.css"><script type="application/ld+json">
+<meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://ryutaro-a.github.io/ryutaro1104/images/image.png"><link rel="apple-touch-icon" sizes="180x180" href="https://ryutaro-a.github.io/ryutaro1104/apple-touch-icon.png"><link rel="mask-icon" href="https://ryutaro-a.github.io/ryutaro1104/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="https://ryutaro-a.github.io/ryutaro1104/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/nlp100-env/" /><link rel="next" href="https://ryutaro-a.github.io/ryutaro1104/fundamental_svm/" /><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/page.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/home.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
@@ -91,7 +89,7 @@ Pyenvの導入は簡単で、WSL上で以下のコマンドをすべて打つだ
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
+            <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note">Ryutaro note</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/about/"> About </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/categories/"> Categories </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/tags/"> Tags </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -115,7 +113,7 @@ Pyenvの導入は簡単で、WSL上で以下のコマンドをすべて打つだ
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note"><span class="header-title-pre"><i class="fa-solid fa-code"></i></span>Ryutaro note</a>
+                <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note">Ryutaro note</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
