--- a/about/index.html
+++ b/about/index.html
@@ -30,7 +30,7 @@
         "mainEntityOfPage": {
             "@type": "WebPage",
             "@id": "https:\/\/ryutaro-a.github.io\/ryutaro1104\/about\/"
-        },"genre": "page","wordcount":  8 ,
+        },"image": ["https:\/\/ryutaro-a.github.io\/images\/image.png"],"genre": "page","wordcount":  8 ,
         "url": "https:\/\/ryutaro-a.github.io\/ryutaro1104\/about\/","publisher": {
             "@type": "Organization",
             "name": ""},"author": {
@@ -105,11 +105,11 @@
     <div class="grid top"><div class="img"><img
         class="lazyload"
         src="https://ryutaro-a.github.io/ryutaro1104/svg/loading.min.svg"
-        data-src="https://ryutaro-a.github.io/ryutaro1104/images/image.webp"
-        data-srcset="https://ryutaro-a.github.io/ryutaro1104/images/image.webp, https://ryutaro-a.github.io/ryutaro1104/images/image.webp 1.5x, https://ryutaro-a.github.io/ryutaro1104/images/image.webp 2x"
+        data-src="https://ryutaro-a.github.io/ryutaro1104/images/image.png"
+        data-srcset="https://ryutaro-a.github.io/ryutaro1104/images/image.png, https://ryutaro-a.github.io/ryutaro1104/images/image.png 1.5x, https://ryutaro-a.github.io/ryutaro1104/images/image.png 2x"
         data-sizes="auto"
-        alt="/images/image.webp"
-        title="/images/image.webp" /></div><h2>Ryutaro note</h2><div class="subtitle">This is Ryutaro's Page.</div><div class="links"><a href="https://github.com/Ryutaro-A" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a><a href="https://twitter.com/@ryu1104_m" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fab fa-twitter fa-fw"></i></a><a href="https://ryutaro-a.github.io/ryutaro1104/index.xml" title="RSS" target="_blank" rel="noopener noreffer me"><i class="fas fa-rss fa-fw"></i></a></div></div>
+        alt="/images/image.png"
+        title="/images/image.png" /></div><h2>Ryutaro note</h2><div class="subtitle">This is Ryutaro's Page.</div><div class="links"><a href="https://github.com/Ryutaro-A" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a><a href="https://twitter.com/@ryu1104_m" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fab fa-twitter fa-fw"></i></a><a href="https://ryutaro-a.github.io/ryutaro1104/index.xml" title="RSS" target="_blank" rel="noopener noreffer me"><i class="fas fa-rss fa-fw"></i></a></div></div>
     <div class="grid bottom">
     <div class="info"><p><i class="fas fa-building fa-fw"></i>&nbsp;所属:<span>電気通信大学大学院 情報理工学研究科 情報学専攻</span></p>
         <hr><p><i class="fas fa-graduation-cap fa-fw"></i>&nbsp;専門:<span>自然言語処理/対話システム</span></p>
