--- a/about/index.html
+++ b/about/index.html
@@ -30,7 +30,7 @@
         "mainEntityOfPage": {
             "@type": "WebPage",
             "@id": "https:\/\/ryutaro-a.github.io\/ryutaro1104\/about\/"
-        },"image": ["https:\/\/ryutaro-a.github.io\/images\/image.png"],"genre": "page","wordcount":  8 ,
+        },"genre": "page","wordcount":  8 ,
         "url": "https:\/\/ryutaro-a.github.io\/ryutaro1104\/about\/","publisher": {
             "@type": "Organization",
             "name": ""},"author": {
