--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         "url": "https:\/\/ryutaro-a.github.io\/ryutaro1104\/","inLanguage": "en","author": {
                 "@type": "Person",
                 "name": "Ryutaro-A"
-            },"description": "This is Ryutaro's Page.","image": "https:\/\/ryutaro-a.github.io\/images\/image.png","name": "Ryutaro note"
+            },"description": "This is Ryutaro's Page.","name": "Ryutaro note"
     }
     </script></head><body data-header-desktop="fixed" data-header-mobile="auto"><script>(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
 
