--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                 <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-avatar"><a href="https://ryutaro-a.github.io/ryutaro1104/about/" title="About"><img
         class="lazyload"
         src="https://ryutaro-a.github.io/ryutaro1104/svg/loading.min.svg"
-        data-src="https://ryutaro-a.github.io/ryutaro1104/images/image.png"
-        data-srcset="https://ryutaro-a.github.io/ryutaro1104/images/image.png, https://ryutaro-a.github.io/ryutaro1104/images/image.png 1.5x, https://ryutaro-a.github.io/ryutaro1104/images/image.png 2x"
+        data-src="https://ryutaro-a.github.io/ryutaro1104/images/image.webp"
+        data-srcset="https://ryutaro-a.github.io/ryutaro1104/images/image.webp, https://ryutaro-a.github.io/ryutaro1104/images/image.webp 1.5x, https://ryutaro-a.github.io/ryutaro1104/images/image.webp 2x"
         data-sizes="auto"
-        alt="/images/image.png"
-        title="/images/image.png" /></a></div><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"><a href="https://github.com/Ryutaro-A" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a><a href="https://twitter.com/@ryu1104_m" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fab fa-twitter fa-fw"></i></a><a href="https://ryutaro-a.github.io/ryutaro1104/index.xml" title="RSS" target="_blank" rel="noopener noreffer me"><i class="fas fa-rss fa-fw"></i></a></div></div>
+        alt="/images/image.webp"
+        title="/images/image.webp" /></a></div><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"><a href="https://github.com/Ryutaro-A" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a><a href="https://twitter.com/@ryu1104_m" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fab fa-twitter fa-fw"></i></a><a href="https://ryutaro-a.github.io/ryutaro1104/index.xml" title="RSS" target="_blank" rel="noopener noreffer me"><i class="fas fa-rss fa-fw"></i></a></div></div>
 <div class="summary-card"><article class="summary" itemscope itemtype="http://schema.org/Article" ><div class="featured-image-preview">
             <a href="https://ryutaro-a.github.io/ryutaro1104/fairseq-env/"><img
         class="lazyload"
