--- a/about/index.html
+++ b/about/index.html
@@ -6,8 +6,7 @@
         <meta name="robots" content="noodp" />
         <title> - Ryutaro note</title><meta name="description" content="This is Ryutaro&#39;s Page."><meta property="og:title" content="" />
 <meta property="og:description" content="About Ryutaro-A 所属 電気通信大学大学院 稲葉研究室 修士１年
-趣味 旅行/ゲーム/読書
- " />
+研究キーワード  自然言語処理 対話要約 対話生成 ペルソナ  成果物 論文紹介資料はこちらにあります→論文紹介スライド" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ryutaro-a.github.io/ryutaro1104/about/" /><meta property="og:image" content="https://ryutaro-a.github.io/ryutaro1104/47"/><meta property="article:section" content="" />
 
@@ -18,8 +17,7 @@
 
 <meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="About Ryutaro-A 所属 電気通信大学大学院 稲葉研究室 修士１年
-趣味 旅行/ゲーム/読書
- "/>
+研究キーワード  自然言語処理 対話要約 対話生成 ペルソナ  成果物 論文紹介資料はこちらにあります→論文紹介スライド"/>
 <meta name="application-name" content="Ryutaro note">
 <meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://ryutaro-a.github.io/ryutaro1104/images/image.png"><link rel="apple-touch-icon" sizes="180x180" href="https://ryutaro-a.github.io/ryutaro1104/apple-touch-icon.png"><link rel="mask-icon" href="https://ryutaro-a.github.io/ryutaro1104/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="https://ryutaro-a.github.io/ryutaro1104/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/about/" /><link rel="prev" href="https://ryutaro-a.github.io/ryutaro1104/slides/" /><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/about.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/page.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/home.min.css"><script type="application/ld+json">
     {
@@ -30,7 +28,7 @@
         "mainEntityOfPage": {
             "@type": "WebPage",
             "@id": "https:\/\/ryutaro-a.github.io\/ryutaro1104\/about\/"
-        },"genre": "page","wordcount":  8 ,
+        },"genre": "page","wordcount":  13 ,
         "url": "https:\/\/ryutaro-a.github.io\/ryutaro1104\/about\/","publisher": {
             "@type": "Organization",
             "name": ""},"author": {
@@ -144,11 +142,17 @@
 </div>
 
 </div><div class="single-card"><div class="content" id="content"><h1 id="about-ryutaro-a">About Ryutaro-A</h1>
-<h1 id="所属">所属</h1>
+<h2 id="所属">所属</h2>
 <p>電気通信大学大学院 稲葉研究室 修士１年</p>
-<h1 id="趣味">趣味</h1>
-<p>旅行/ゲーム/読書</p>
-<h1 id="heading"></h1>
+<h2 id="研究キーワード">研究キーワード</h2>
+<ul>
+<li>自然言語処理</li>
+<li>対話要約</li>
+<li>対話生成</li>
+<li>ペルソナ</li>
+</ul>
+<h2 id="成果物">成果物</h2>
+<p>論文紹介資料はこちらにあります→<a href="https://ryutaro-a.github.io/ryutaro1104/slides/" target="_blank" rel="noopener noreffer">論文紹介スライド</a></p>
 </div>
         </div>
     </article></div>
